--- a/veicoli.html
+++ b/veicoli.html
@@ -38,11 +38,11 @@
     <h1>I nostri veicoli</h1>
     <div class="vehicles">
         <a class="vehicle" href="veicolo1.html">
-            <img src="rs3.jpg" alt="Audi RS3">
-            <h2>Audi RS3</h2>
+            <img src="rr fornt.jpg" alt="Range Rover">
+            <h2>Range Rover Sport</h2>
         </a>
         <a class="vehicle" href="veicolo2.html">
-            <img src="rs3.jpg" alt="BMW i8">
+            <img src="i8.jpg" alt="BMW i8">
             <h2>BMW i8</h2>
         </a>
     </div>
