--- a/veicoli.html
+++ b/veicoli.html
@@ -23,7 +23,7 @@
         }
         .vehicle img {
             width: 100%;
-            height: auto;
+            height: 100%;
         }
         .vehicle h2 {
             margin: 10px 0;
