--- a/veicoli.html
+++ b/veicoli.html
@@ -22,8 +22,8 @@
             background: #fff;
         }
         .vehicle img {
-            width: 100%;
-            height: 50%%;
+            width: 200px;
+            height: 200px;
         }
         .vehicle h2 {
             margin: 10px 0;
