--- a/veicoli.html
+++ b/veicoli.html
@@ -4,45 +4,93 @@
     <meta charset="UTF-8">
     <title>I nostri veicoli - DriveMeUp</title>
     <style>
-        body { margin: 0; font-family: Arial, sans-serif; }
+        body { margin: 0; font-family: Arial, sans-serif; background: #f8f8f8; }
+        .home-btn {
+            position: fixed;
+            top: 30px;
+            left: 30px;
+            z-index: 100;
+            background-color: #007bff;
+            color: white;
+            padding: 12px 22px;
+            border-radius: 7px;
+            text-decoration: none;
+            font-size: 1em;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+            transition: background 0.2s;
+        }
+        .home-btn:hover {
+            background-color: #0056b3;
+        }
+        h1 {
+            text-align: center;
+            padding: 40px 0 0 0;
+        }
         .vehicles {
             display: flex;
             justify-content: center;
             padding: 40px 20px;
             gap: 30px;
+            flex-wrap: wrap;
         }
         .vehicle {
             border: 1px solid #ccc;
             border-radius: 10px;
             overflow: hidden;
             width: 300px;
+            height: 300px;
             text-align: center;
             text-decoration: none;
             color: black;
             background: #fff;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            box-sizing: border-box;
+            transition: box-shadow 0.2s;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.06);
+        }
+        .vehicle:hover {
+            box-shadow: 0 8px 18px rgba(0,0,0,0.12);
+        }
+        .vehicle-img-wrapper {
+            width: 180px;
+            height: 180px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: #eaeaea;
+            border-radius: 7px;
+            margin: 0 auto 10px auto;
+            overflow: hidden;
         }
         .vehicle img {
-            width: 200px;
-            height: 200px;
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain;
+            display: block;
         }
         .vehicle h2 {
-            margin: 10px 0;
-        }
-        h1 {
-            text-align: center;
-            padding: 30px 0 0 0;
+            margin: 10px 0 0 0;
+            font-size: 1.2em;
         }
     </style>
 </head>
 <body>
+    <a class="home-btn" href="index.html">&#8962; Home</a>
     <h1>I nostri veicoli</h1>
     <div class="vehicles">
         <a class="vehicle" href="veicolo1.html">
-            <img src="rr fornt.jpg" alt="Range Rover">
-            <h2>Range Rover Sport</h2>
+            <div class="vehicle-img-wrapper">
+                <img src="rs3.jpg" alt="Audi RS3">
+            </div>
+            <h2>Audi RS3</h2>
         </a>
         <a class="vehicle" href="veicolo2.html">
-            <img src="i8.jpg" alt="BMW i8">
+            <div class="vehicle-img-wrapper">
+                <img src="rs3.jpg" alt="BMW i8">
+            </div>
             <h2>BMW i8</h2>
         </a>
     </div>
