--- a/veicoli.html
+++ b/veicoli.html
@@ -7,17 +7,20 @@
         body { margin: 0; font-family: Arial, sans-serif; background: #f8f8f8; }
         .home-btn {
             position: fixed;
-            top: 30px;
-            left: 30px;
+            top: 24px;
+            left: 24px;
             z-index: 100;
             background-color: #007bff;
             color: white;
-            padding: 12px 22px;
-            border-radius: 7px;
+            padding: 14px 28px;
+            border-radius: 8px;
             text-decoration: none;
-            font-size: 1em;
+            font-size: 1.1em;
+            font-weight: bold;
             box-shadow: 0 2px 8px rgba(0,0,0,0.08);
             transition: background 0.2s;
+            border: none;
+            display: inline-block;
         }
         .home-btn:hover {
             background-color: #0056b3;
@@ -35,10 +38,10 @@
         }
         .vehicle {
             border: 1px solid #ccc;
-            border-radius: 10px;
+            border-radius: 14px;
             overflow: hidden;
-            width: 300px;
-            height: 300px;
+            width: 340px;
+            height: 340px;
             text-align: center;
             text-decoration: none;
             color: black;
@@ -52,17 +55,17 @@
             box-shadow: 0 4px 12px rgba(0,0,0,0.06);
         }
         .vehicle:hover {
-            box-shadow: 0 8px 18px rgba(0,0,0,0.12);
+            box-shadow: 0 8px 18px rgba(0,0,0,0.13);
         }
         .vehicle-img-wrapper {
-            width: 180px;
-            height: 180px;
+            width: 260px;
+            height: 260px;
             display: flex;
             align-items: center;
             justify-content: center;
             background: #eaeaea;
-            border-radius: 7px;
-            margin: 0 auto 10px auto;
+            border-radius: 8px;
+            margin: 0 auto 12px auto;
             overflow: hidden;
         }
         .vehicle img {
@@ -73,7 +76,7 @@
         }
         .vehicle h2 {
             margin: 10px 0 0 0;
-            font-size: 1.2em;
+            font-size: 1.25em;
         }
     </style>
 </head>
