--- a/veicoli.html
+++ b/veicoli.html
@@ -86,13 +86,13 @@
     <div class="vehicles">
         <a class="vehicle" href="veicolo1.html">
             <div class="vehicle-img-wrapper">
-                <img src="rs3.jpg" alt="Audi RS3">
+                <img src="rr fornt.jpg" alt="RR Sport">
             </div>
-            <h2>Audi RS3</h2>
+            <h2>Range Rover Sport</h2>
         </a>
         <a class="vehicle" href="veicolo2.html">
             <div class="vehicle-img-wrapper">
-                <img src="rs3.jpg" alt="BMW i8">
+                <img src="i8.jpg" alt="BMW i8">
             </div>
             <h2>BMW i8</h2>
         </a>
