--- a/veicoli.html
+++ b/veicoli.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>I nostri veicoli - DriveMeUp</title>
     <style>
+        body { margin: 0; font-family: Arial, sans-serif; background: #f8f8f8; }
         h1 {
             text-align: center;
             padding: 40px 0 0 0;
