--- a/veicoli.html
+++ b/veicoli.html
@@ -65,7 +65,7 @@
     <a class="home-btn" href="index.html">&#8962; Home</a>
     <h1>I nostri veicoli</h1>
     <div class="vehicles">
-        <a class="vehicle" href="veicolo1.html">
+        <a class="vehicle" href="veicolo1_thumb.html">
             <div class="vehicle-img-wrapper">
                 <img src="rr fornt.jpg" alt="RR Sport">
             </div>
