--- a/veicolo1_thumb.html
+++ b/veicolo1_thumb.html
@@ -128,9 +128,9 @@
             <img id="main-img" src="rs3.jpg" alt="Audi RS3">
         </div>
         <div class="thumbnails">
-            <div class="thumbnail selected"><img src="rs3.jpg" alt="Vista frontale"></div>
-            <div class="thumbnail"><img src="rs3_interno.jpg" alt="Interni"></div>
-            <div class="thumbnail"><img src="rs3_lato.jpg" alt="Vista laterale"></div>
+            <div class="thumbnail selected"><img src="rr fornt.jpg" alt="Frontale"></div>
+            <div class="thumbnail"><img src="rr back.jpg" alt="Retro"></div>
+            <div class="thumbnail"><img src="rr in.jpg" alt="Interni"></div>
         </div>
         <h1>Audi RS3</h1>
         <p>
