--- a/veicolo1_thumb.html
+++ b/veicolo1_thumb.html
@@ -123,9 +123,9 @@
             <img id="main-img" src="rr fornt.jpg" alt="Audi RS3">
         </div>
         <div class="thumbnails">
-            <div class="thumbnail selected" data-big="rr fornt.jpg"><img src="foto1.jpg" alt="Vista frontale"></div>
-            <div class="thumbnail" data-big="foto2.jpg"><img src="rr in.jpg" alt="Vista posteriore"></div>
-            <div class="thumbnail" data-big="foto3.jpg"><img src="rr back.jpg" alt="Interni"></div>
+            <div class="thumbnail selected" data-big="rr fornt.jpg"><img src="rr fornt.jpg" alt="Vista frontale"></div>
+            <div class="thumbnail selected" data-big="foto2.jpg"><img src="rr in.jpg" alt="Vista posteriore"></div>
+            <div class="thumbnail selected" data-big="foto3.jpg"><img src="rr back.jpg" alt="Interni"></div>
         </div>
         <h1>Audi RS3</h1>
         <p>
